RESOLVED FIXED 62401
IndexedDB: setVersion() version argument is required
https://bugs.webkit.org/show_bug.cgi?id=62401
Summary IndexedDB: setVersion() version argument is required
Mark Pilgrim (Google)
Reported 2011-06-09 13:49:23 PDT
Created attachment 96635 [details] test case http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#widl-IDBDatabase-setVersion-IDBVersionChangeRequest-DOMString-version states that the version argument of setVersion() is required and can not be null. This test calls setVersion() without any arguments. Expected behavior: throw IDBDatabaseException.NON_TRANSIENT_ERR Actual behavior: no exception, version set to the 9-character string "undefined" Test case attached.
Attachments
test case (1.81 KB, text/html)
2011-06-09 13:49 PDT, Mark Pilgrim (Google)
no flags
Patch (6.27 KB, patch)
2011-06-10 12:17 PDT, Mark Pilgrim (Google)
no flags
Mark Pilgrim (Google)
Comment 1 2011-06-10 12:17:56 PDT
Mark Pilgrim (Google)
Comment 2 2011-06-10 12:20:23 PDT
Turns out we weren't checking for null either. Added a test for that too. The patch fixes both issues (missing and null).
David Grogan
Comment 3 2011-06-10 13:58:25 PDT
Comment on attachment 96771 [details] Patch LGTM
WebKit Review Bot
Comment 4 2011-06-10 14:14:25 PDT
Comment on attachment 96771 [details] Patch Clearing flags on attachment: 96771 Committed r88565: <http://trac.webkit.org/changeset/88565>
WebKit Review Bot
Comment 5 2011-06-10 14:14:30 PDT
All reviewed patches have been landed. Closing bug.
Dimitri Glazkov (Google)
Comment 6 2011-06-11 10:13:00 PDT
Reverted r88565 for reason: Broke Chromium browser test: IndexedDBBrowserTestWithGCExposed.DatabaseCallbacksTest Committed r88602: <http://trac.webkit.org/changeset/88602>
Dimitri Glazkov (Google)
Comment 7 2011-06-11 10:54:03 PDT
Urk. Turns out I can't tell with certitude that this patch actually broke that particular test :( Looking at this: http://build.chromium.org/p/chromium.webkit/waterfall?builder=Linux%20Tests The test started failing with this commit, but still fails after I reverted it. Whuh?
Tony Chang
Comment 8 2011-06-13 10:29:14 PDT
dglazkov narrowed down the error to bug 62398 (r88569). I think we need to roll this patch back in, right?
Dimitri Glazkov (Google)
Comment 9 2011-06-13 10:31:30 PDT
(In reply to comment #8) > dglazkov narrowed down the error to bug 62398 (r88569). I think we need to roll this patch back in, right? Right. Apologies :)
Tony Chang
Comment 10 2011-06-13 10:49:44 PDT
Comment on attachment 96771 [details] Patch Let's see if the commit bot can reland it for us.
WebKit Review Bot
Comment 11 2011-06-13 11:29:16 PDT
Comment on attachment 96771 [details] Patch Clearing flags on attachment: 96771 Committed r88660: <http://trac.webkit.org/changeset/88660>
WebKit Review Bot
Comment 12 2011-06-13 11:29:21 PDT
All reviewed patches have been landed. Closing bug.
Dimitri Glazkov (Google)
Comment 13 2011-06-13 11:31:10 PDT
(In reply to comment #12) > All reviewed patches have been landed. Closing bug. <3.
Note You need to log in before you can comment on or make changes to this bug.