2011-06-11  Dimitri Glazkov  <dglazkov@chromium.org>

Unreviewed, rolling out r88565.
        http://trac.webkit.org/changeset/88565
        https://bugs.webkit.org/show_bug.cgi?id=62401

        Broke Chromium browser test:
        IndexedDBBrowserTestWithGCExposed.DatabaseCallbacksTest

        * storage/indexeddb/setVersion-undefined-expected.txt: Removed.
        * storage/indexeddb/setVersion-undefined.html: Removed.
2011-06-11  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r88565.
        http://trac.webkit.org/changeset/88565
        https://bugs.webkit.org/show_bug.cgi?id=62401

        Broke Chromium browser test:
        IndexedDBBrowserTestWithGCExposed.DatabaseCallbacksTest

        * storage/IDBDatabase.cpp:
        (WebCore::IDBDatabase::setVersion):
        * storage/IDBDatabase.idl:

Canonical link: https://commits.webkit.org/78007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88602 268f45cc-cd09-0410-ab3c-d52691b4dbfc